--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -387,7 +387,7 @@ booktitle ={Proceedings of the International Conference on Pattern
 	  slides = {https://polimi365-my.sharepoint.com/:b:/g/personal/10755186_polimi_it/EeOjPRq5CE5Lm4QBkVE_MugBBiEUmXoVkGJsXDFteuiB4Q?e=8Q79xt},
 	 poster = {https://polimi365-my.sharepoint.com/:b:/g/personal/10755186_polimi_it/EbdUFKPEsaRGp__kknUQj3YBbYsHEyyyZ5i7_dW3Ld1vEA?e=gWOAb1},
 	note= {Accepted. Acceptance rate: ~27\%},
-	  year={2021},
+	  year={2021}
 }
 
 @inproceedings{cin2021,
@@ -408,13 +408,43 @@ booktitle ={Proceedings of the International Conference on Pattern
 	author ={Maria Rizzo, Antonino  and  Magri, Luca and  Rutigliano, Davide and  Invernizzi, Pietro and  Sozio, Enrico and  Alippi, Cesare and  Binetti,Stefano and  Boracchi,Giacomo },
 	journal = "Neural Computing and Applications",
 	doi = {https://doi.org/10.1007/s00521-022-07634-2},
-	year={2022},
+	year={2022}
 }
 
 @inproceedings{dalcin2022,
 	title={Multi-body Self-Calibration},
 	author={Porfiri Dal Cin, Andrea and Boracchi, Giacomo and Magri, Luca},
 	  year={2022},
-	
-	booktitle= bmvc,
+	poster ={https://bmvc2022.mpi-inf.mpg.de/0471_poster.pdf},
+	slides = {https://www.youtube.com/watch?v=uaBM1G46UJs},
+	code = {https://github.com/andreadalcin/MultiBodySelfCalibration},
+	supplementary = {https://bmvc2022.mpi-inf.mpg.de/0471_supp.zip},
+	booktitle= bmvc
+}
+
+
+
+@inproceedings{RizzoAl23,
+  author={Rizzo, Antonino Maria and Magri, Luca and Invernizzi, Pietro and Sozio, Enrico and Piciaccia, Stefano and Tanzi, Alberto and Binetti, Stefano and Alippi, Cesare and Boracchi, Giacomo},
+  booktitle={IEEE International Conference on Acoustics, Speech and Signal Processing}, 
+  title={Anomaly Detection in Optical Spectra via Joint Optimization}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={1-5},
+  doi={10.1109/ICASSP49357.2023.10096609}
+  }
+
+
+@inproceedings{FarinaAl23,
+	abbrv = {cvpr}, 
+    author    = {Farina, Matteo and Magri, Luca and Menapace, Willi and Ricci, Elisa and Golyanik, Vladislav and Arrigoni, Federica},
+    title     = {Quantum Multi-Model Fitting},
+    booktitle = cvpr,
+    month     = {June},
+    year      = {2023},
+    pages     = {13640-13649},
+	code ={https://github.com/FarinaMatteo/qmmf},
+	pdf = {https://openaccess.thecvf.com/content/CVPR2023/papers/Farina_Quantum_Multi-Model_Fitting_CVPR_2023_paper.pdf}
+
 }
