--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -432,12 +432,13 @@ booktitle ={Proceedings of the International Conference on Pattern
   volume={},
   number={},
   pages={1-5},
+  pdf = {https://openaccess.thecvf.com/content/CVPR2023/papers/Farina_Quantum_Multi-Model_Fitting_CVPR_2023_paper.pdf}
   doi={10.1109/ICASSP49357.2023.10096609}
   }
 
 
 @inproceedings{FarinaAl23,
-	abbrv = {cvpr}, 
+	abbrv={cvpr}, 
     author    = {Farina, Matteo and Magri, Luca and Menapace, Willi and Ricci, Elisa and Golyanik, Vladislav and Arrigoni, Federica},
     title     = {Quantum Multi-Model Fitting},
     booktitle = cvpr,
