--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -431,7 +431,7 @@ booktitle ={Proceedings of the International Conference on Pattern
   year={2023},
   pages={1-5},
   pdf = {https://openaccess.thecvf.com/content/CVPR2023/papers/Farina_Quantum_Multi-Model_Fitting_CVPR_2023_paper.pdf}
-  doi={10.1109/ICASSP49357.2023.10096609}
+  doi={10.1109/ICASSP49357.2023.10096609},
   }
 
 
