--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -430,7 +430,7 @@ booktitle ={Proceedings of the International Conference on Pattern
   title={Anomaly Detection in Optical Spectra via Joint Optimization}, 
   year={2023},
   pages={1-5},
-  pdf = {https://openaccess.thecvf.com/content/CVPR2023/papers/Farina_Quantum_Multi-Model_Fitting_CVPR_2023_paper.pdf}
+  pdf = {https://openaccess.thecvf.com/content/CVPR2023/papers/Farina_Quantum_Multi-Model_Fitting_CVPR_2023_paper.pdf},
   doi={10.1109/ICASSP49357.2023.10096609},
   }
 
