--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -430,8 +430,10 @@ booktitle ={Proceedings of the International Conference on Pattern
   title={Anomaly Detection in Optical Spectra via Joint Optimization}, 
   year={2023},
   pages={1-5},
-  pdf = {https://openaccess.thecvf.com/content/CVPR2023/papers/Farina_Quantum_Multi-Model_Fitting_CVPR_2023_paper.pdf},
+  pdf = {},
   doi={10.1109/ICASSP49357.2023.10096609},
+  poster = {https://t.ly/h0cSS},
+  html = {https://t.ly/XkyAG},
   }
 
 
@@ -444,6 +446,25 @@ booktitle ={Proceedings of the International Conference on Pattern
     year      = {2023},
     pages     = {13640-13649},
 	code ={https://github.com/FarinaMatteo/qmmf},
-	pdf = {https://openaccess.thecvf.com/content/CVPR2023/papers/Farina_Quantum_Multi-Model_Fitting_CVPR_2023_paper.pdf}
+	pdf = {https://openaccess.thecvf.com/content/CVPR2023/papers/Farina_Quantum_Multi-Model_Fitting_CVPR_2023_paper.pdf},
+}
 
+@inproceedings{RizzoAl23b,
+  author={Rizzo, Antonino Maria and Magri, Luca and Invernizzi, Pietro and Sozio, Enrico and Aquaro, Gabriele and Binetti, Stefano and Alippi, Cesare and Boracchi, Giacomo},
+  booktitle={European Signal Processing Conference}, 
+  title={Event Detection in Optical Signals via Domain Adaptation}, 
+  year={2023},
+  pdf = {https://t.ly/GI57P},
+  poster = {https://t.ly/v5gXM},
+  html = {https://t.ly/u2Psi},
+  }
+
+
+  @inproceedings{LeveniAl23,
+  title={Hashing for Structure-Based Anomaly Detection},
+  author={Leveni, Filippo and Magri, Luca and Alippi, Cesare and Boracchi, Giacomo},
+  booktitle={International Conference on Image Analysis and Processing},
+  pages={25--36},
+  year={2023},
+  organization={Springer},
 }
