--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -391,7 +391,7 @@ booktitle ={Proceedings of the International Conference on Pattern
 }
 
 @inproceedings{cin2021,
-	abbr={iccv},
+ abbr={iccv},
   title={Synchronization of Group-labelled Multi-graphs},
   author={Cin, Andrea Porfiri Dal and Magri, Luca and Arrigoni, Federica and Fusiello, Andrea and Boracchi, Giacomo},
    pdf ={https://openaccess.thecvf.com/content/ICCV2021/papers/Dal_Cin_Synchronization_of_Group-Labelled_Multi-Graphs_ICCV_2021_paper.pdf},
@@ -425,6 +425,7 @@ booktitle ={Proceedings of the International Conference on Pattern
 
 
 @inproceedings{RizzoAl23,
+  abbr={icasp},
   author={Rizzo, Antonino Maria and Magri, Luca and Invernizzi, Pietro and Sozio, Enrico and Piciaccia, Stefano and Tanzi, Alberto and Binetti, Stefano and Alippi, Cesare and Boracchi, Giacomo},
   booktitle={IEEE International Conference on Acoustics, Speech and Signal Processing}, 
   title={Anomaly Detection in Optical Spectra via Joint Optimization}, 
@@ -438,7 +439,7 @@ booktitle ={Proceedings of the International Conference on Pattern
 
 
 @inproceedings{FarinaAl23,
-	abbrv={cvpr}, 
+	abbr={cvpr}, 
     author    = {Farina, Matteo and Magri, Luca and Menapace, Willi and Ricci, Elisa and Golyanik, Vladislav and Arrigoni, Federica},
     title     = {Quantum Multi-Model Fitting},
     booktitle = cvpr,
@@ -467,4 +468,18 @@ booktitle ={Proceedings of the International Conference on Pattern
   pages={25--36},
   year={2023},
   organization={Springer},
+  slides = {https://polimi365-my.sharepoint.com/:b:/g/personal/10453617_polimi_it/EYrWnanQeH9FsHlYYCj3rM0BoTHlBj7qIFb4mXjvbKVDpQ?e=9Ed7x2},
+  code = {https://github.com/ineveLoppiliF/Hashing-for-Structure-based-Anomaly-Detection
+},
+}
+@InProceedings{CinAl23,
+	abbr ={iccv},
+    author    = {Cin, Andrea Porfiri Dal and Boracchi, Giacomo and Magri, Luca},
+    title     = {Multi-body Depth and Camera Pose Estimation from Multiple Views},
+    booktitle = iccv,
+    month     = {October},
+    year      = {2023},
+    pages     = {17804-17814},
+	code = {https://github.com/andreadalcin/MultiBodySfM},
+	pdf={https://openaccess.thecvf.com/content/ICCV2023/papers/Dal_Cin_Multi-body_Depth_and_Camera_Pose_Estimation_from_Multiple_Views_ICCV_2023_paper.pdf},
 }
