--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -469,10 +469,9 @@ booktitle ={Proceedings of the International Conference on Pattern
   year={2023},
   organization={Springer},
   slides = {https://polimi365-my.sharepoint.com/:b:/g/personal/10453617_polimi_it/EYrWnanQeH9FsHlYYCj3rM0BoTHlBj7qIFb4mXjvbKVDpQ?e=9Ed7x2},
-  code = {https://github.com/ineveLoppiliF/Hashing-for-Structure-based-Anomaly-Detection
-},
+  code = {https://github.com/ineveLoppiliF/Hashing-for-Structure-based-Anomaly-Detection},
 }
-@InProceedings{CinAl23,
+@inproceedings{CinAl23,
 	abbr ={iccv},
     author    = {Cin, Andrea Porfiri Dal and Boracchi, Giacomo and Magri, Luca},
     title     = {Multi-body Depth and Camera Pose Estimation from Multiple Views},
