update bio and authors

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -448,6 +448,8 @@ booktitle ={Proceedings of the International Conference on Pattern
     pages     = {13640-13649},
 	code ={https://github.com/FarinaMatteo/qmmf},
 	pdf = {https://openaccess.thecvf.com/content/CVPR2023/papers/Farina_Quantum_Multi-Model_Fitting_CVPR_2023_paper.pdf},
+	html ={https://github.com/FarinaMatteo/qmmf},
+	video = {https://polimi365-my.sharepoint.com/:v:/g/personal/10755186_polimi_it/EcNpBFdXRJtNqwkvjj9aTXQBrwUBTIAHA5rkCEmlQ1u90A?e=dpuBd0},
 }
 
 @inproceedings{RizzoAl23b,
@@ -471,6 +473,7 @@ booktitle ={Proceedings of the International Conference on Pattern
   slides = {https://polimi365-my.sharepoint.com/:b:/g/personal/10453617_polimi_it/EYrWnanQeH9FsHlYYCj3rM0BoTHlBj7qIFb4mXjvbKVDpQ?e=9Ed7x2},
   code = {https://github.com/ineveLoppiliF/Hashing-for-Structure-based-Anomaly-Detection},
 }
+
 @inproceedings{CinAl23,
 	abbr ={iccv},
     author    = {Cin, Andrea Porfiri Dal and Boracchi, Giacomo and Magri, Luca},
