--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -476,7 +476,7 @@ booktitle ={Proceedings of the International Conference on Pattern
 
 @inproceedings{CinAl23,
 	abbr ={iccv},
-    author    = {Cin, Andrea Porfiri Dal and Boracchi, Giacomo and Magri, Luca},
+    author    = {Porfiri Dal Cin, Andrea  and Boracchi, Giacomo and Magri, Luca},
     title     = {Multi-body Depth and Camera Pose Estimation from Multiple Views},
     booktitle = iccv,
     month     = {October},
@@ -485,3 +485,15 @@ booktitle ={Proceedings of the International Conference on Pattern
 	code = {https://github.com/andreadalcin/MultiBodySfM},
 	pdf={https://openaccess.thecvf.com/content/ICCV2023/papers/Dal_Cin_Multi-body_Depth_and_Camera_Pose_Estimation_from_Multiple_Views_ICCV_2023_paper.pdf},
 }
+
+
+@article{StucchiMagriAl23,
+  author={Stucchi, Diego and Magri, Luca and Carrera, Diego and Boracchi, Giacomo},
+  journal={IEEE Transactions on Neural Networks and Learning Systems}, 
+  title={Multimodal Batch-Wise Change Detection}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={1-15},
+  doi={10.1109/TNNLS.2023.3294846},
+  }
