--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -497,3 +497,25 @@ booktitle ={Proceedings of the International Conference on Pattern
   pages={1-15},
   doi={10.1109/TNNLS.2023.3294846},
   }
+
+@article{MASET2023100051,
+title = {Principled bundle block adjustment with multi-head cameras},
+journal = {ISPRS Open Journal of Photogrammetry and Remote Sensing},
+pages = {100051},
+year = {2023},
+issn = {2667-3932},
+doi = {https://doi.org/10.1016/j.ophoto.2023.100051},
+url = {https://www.sciencedirect.com/science/article/pii/S2667393223000224},
+author = {Eleonora Maset and Luca Magri and Andrea Fusiello},
+keywords = {Bundle adjustment, Orientation, Oblique images, Multi-head camera, Multi-camera}
+}
+
+@INPROCEEDINGS{10289940,
+  author={Rizzo, Antonino Maria and Magri, Luca and Invernizzi, Pietro and Sozio, Enrico and Aquaro, Gabriele and Binetti, Stefano and Alippi, Cesare and Boracchi, Giacomo},
+  booktitle={2023 31st European Signal Processing Conference (EUSIPCO)}, 
+  title={Event Detection in Optical Signals via Domain Adaptation}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={1435-1439},
+  doi={10.23919/EUSIPCO58844.2023.10289940}}
