--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -519,3 +519,16 @@ keywords = {Bundle adjustment, Orientation, Oblique images, Multi-head camera, M
   number={},
   pages={1435-1439},
   doi={10.23919/EUSIPCO58844.2023.10289940}}
+
+
+
+@inproceedings{cin2024minimal,
+  title={Minimal Perspective Autocalibration},
+  author={Cin, Andrea Porfiri Dal and Duff, Timothy and Magri, Luca and Pajdla, Tomas},
+  booktitle= cvpr,
+  pages={5064--5073},
+  pdf = {https://openaccess.thecvf.com/content/CVPR2024/html/Dal_Cin_Minimal_Perspective_Autocalibration_CVPR_2024_paper.html},
+  poster ={https://polimi365-my.sharepoint.com/:b:/g/personal/10755186_polimi_it/EcU0BbGZT8dAsEUrgmLR3PUBxSKQrmuHmoxRgxWQwtRAkg?e=75egx0},
+  code ={https://github.com/andreadalcin/MinimalPerspectiveAutocalibration},
+  year={2024}
+}
