--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -523,6 +523,7 @@ keywords = {Bundle adjustment, Orientation, Oblique images, Multi-head camera, M
 
 
 @inproceedings{cin2024minimal,
+	abbr ={cvpr},
   title={Minimal Perspective Autocalibration},
   author={Cin, Andrea Porfiri Dal and Duff, Timothy and Magri, Luca and Pajdla, Tomas},
   booktitle= cvpr,
@@ -532,3 +533,13 @@ keywords = {Bundle adjustment, Orientation, Oblique images, Multi-head camera, M
   code ={https://github.com/andreadalcin/MinimalPerspectiveAutocalibration},
   year={2024}
 }
+
+
+@inproceedings{basla2024expertdrivendatagenerationpipeline,
+      title={An expert-driven data generation pipeline for histological images}, 
+      author={Roberto Basla and Loris Giulivi and Luca Magri and Giacomo Boracchi},
+      year={2024},
+	  booktitle= {International Symposium on Biomedical Imaging},
+     url={https://arxiv.org/abs/2406.01403}, 
+}
+
