--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -543,3 +543,9 @@ keywords = {Bundle adjustment, Orientation, Oblique images, Multi-head camera, M
      url={https://arxiv.org/abs/2406.01403}, 
 }
 
+@misc{piciaccia2023automatic,
+  title={Automatic trend identification and anomaly detection in optical channel monitoring spectrum},
+  author={Piciaccia, Stefano and Invernizzi, Pietro and Sozio, Enrico and Tanzi, Alberto Arnaldo and Acharjee, Prasenjeet and Rizzo, Antonino Maria and Boracchi, Giacomo and Magri, Luca and Alippi, Cesare and others},
+  year={2023},
+  note={US Patent App. 17/843,285}
+}
