--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -549,3 +549,38 @@ keywords = {Bundle adjustment, Orientation, Oblique images, Multi-head camera, M
   year={2023},
   note={US Patent App. 17/843,285}
 }
+
+
+@inproceedings{sgaravatti2024multimodal,
+  title={A Multimodal Hybrid Late-Cascade Fusion Network for Enhanced 3D Object Detection},
+  author={Sgaravatti, Carlo and Basla, Roberto and Pieroni, Riccardo and Corno, Matteo and Savaresi, Sergio M and Magri, Luca and Boracchi, Giacomo},
+  booktitle={ECCV 2024 Workshop on Multimodal Perception and Comprehension of Corner Cases in Autonomous Driving}
+}
+
+
+@inproceedings{marelli24waste,
+title={Temporal-consistent CAMs for Weakly Supervised Video Segmentation in Waste Sorting},
+author ={Marelli, Andrea and Magri, Luca and Arrigoni, Federica and Boracchi Giacomo},
+booktitle={ECCV 2024 Workshop on Industrial Vision}
+}
+
+@inproceedings{ijcai2024p1004,
+  title     = {Enhancing Manufacturing with AI-powered Process Design},
+  author    = {Genalti, Gianmarco and Corbo, Gabriele and Bianchi, Tommaso and Missaglia, Marco and Negri, Luca and Sala, Andrea and Magri, Luca and Boracchi, Giacomo and Miragliotta, Giovanni and Gatti, Nicola},
+  booktitle = {Proceedings of the Thirty-Third International Joint Conference on
+               Artificial Intelligence - Demo Track},
+  year      = {2024},
+  doi       = {10.24963/ijcai.2024/1004},
+}
+
+@inproceedings{cin2024revisiting,
+  title={Revisiting Calibration of Wide-Angle Radially Symmetric Cameras},
+  author={Cin, Andrea Porfiri Dal and Azzoni, Francesco and Boracchi, Giacomo and  Magri, Luca},
+  booktitle= eccv,
+  pages={5064--5073},
+  doi = {https://doi.org/10.1007/978-3-031-72764-1_13},
+  pdf = {https://polimi365-my.sharepoint.com/:b:/g/personal/10755186_polimi_it/EUCangZcKi5OlfMRPLuPWaUBmtphuMrXo_DFJomwSymvuw?e=bfjp5s},
+  poster ={https://polimi365-my.sharepoint.com/:b:/g/personal/10755186_polimi_it/EcU4Z6mf9k1DpocQdtWOb8gBtLXaFNvxgj6rXArvezS8Cw?e=Ifr7dw},
+  code ={https://github.com/andreadalcin/RadiallySymmetricCalib},
+  year={2024}
+}
